todo-app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-cache
          persistentVolumeClaim:
            claimName: todo-cache
      containers:
      - name: todo-app
        image: todo-app
        imagePullPolicy: Never
        volumeMounts:
          - name: todo-cache
            mountPath: /var/cache
      - name: todo-backend
        image: todo-backend
        imagePullPolicy: Never
