todo-app/manifests/database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-db
  namespace: $NAMESPACE
spec:
  selector:
    matchLabels:
      app: todo-db
  serviceName: todo-db
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
      - name: todo-db
        image: postgres:17
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard # Using kind due to k3d issues on new computer, so this is different
      resources:
        requests:
          storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-db-svc
  namespace: $NAMESPACE
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: todo-db
