todo-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: backend
      protocol: TCP
      port: 8081
      targetPort: 8081
