todo-app/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
  namespace: todo-app
spec:
  rules:
  - http:
      paths:
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-app
            port:
              number: 8081
      - path: /
        pathType: Exact
        backend:
          service:
            name: todo-app
            port:
              number: 8080
      - path: /cache
        pathType: Prefix
        backend:
          service:
            name: todo-app
            port:
              number: 8080
